--- a/DoitDoitChu/Base.lproj/Main.storyboard
+++ b/DoitDoitChu/Base.lproj/Main.storyboard
@@ -259,7 +259,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -522,6 +523,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="ufA-FI-Pti"/>
                     <connections>
+                        <outlet property="PresentImage" destination="SRM-xG-w2u" id="SyG-x8-4FA"/>
                         <outlet property="nextView" destination="bi2-6X-xUr" id="Toh-GY-Lsn"/>
                     </connections>
                 </viewController>
