--- a/DoitDoitChu/Solo/CheckListTestTableViewCell.xib
+++ b/DoitDoitChu/Solo/CheckListTestTableViewCell.xib
@@ -8,11 +8,6 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Pretendard-Medium.otf">
-            <string>Pretendard-Medium</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -24,7 +19,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="PN8-Nl-ONq">
-                        <rect key="frame" x="16" y="17" width="232" height="24"/>
+                        <rect key="frame" x="16" y="17" width="252" height="24"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="unCheckSquare" translatesAutoresizingMaskIntoConstraints="NO" id="uFL-aP-K9K">
                                 <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
@@ -32,16 +27,15 @@
                                     <constraint firstAttribute="width" constant="24" id="Kan-sy-Eda"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XWm-ti-uBf">
-                                <rect key="frame" x="32" y="0.0" width="200" height="24"/>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aw9-pe-fc4">
+                                <rect key="frame" x="32" y="0.0" width="220" height="24"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="24" id="NPX-EM-AGB"/>
-                                    <constraint firstAttribute="width" constant="200" id="ljj-Bu-RVt"/>
+                                    <constraint firstAttribute="width" constant="220" id="bnn-3m-eBr"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Pretendard-Medium" family="Pretendard" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                     </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fuw-qK-AlB">
@@ -77,10 +71,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="TodoListLabel" destination="XWm-ti-uBf" id="7hh-6b-nVf"/>
                 <outlet property="checkImage" destination="uFL-aP-K9K" id="vu5-bW-h60"/>
                 <outlet property="meatBallButton" destination="bbr-xN-FUO" id="S2v-3Q-iiR"/>
                 <outlet property="moreImfo" destination="8Ym-He-PFb" id="ooQ-z8-YWJ"/>
+                <outlet property="todoList" destination="Aw9-pe-fc4" id="6az-fj-6Uf"/>
             </connections>
             <point key="canvasLocation" x="-41.221374045801525" y="37.323943661971832"/>
         </tableViewCell>
