--- a/DoitDoitChu/Base.lproj/Main.storyboard
+++ b/DoitDoitChu/Base.lproj/Main.storyboard
@@ -317,7 +317,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U59-Bt-gCD" customClass="LottieAnimationView" customModule="Lottie">
-                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="animationName" value="85744-success"/>
@@ -646,7 +646,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                 <connections>
-                                    <segue destination="wEb-uc-aet" kind="show" id="MrW-j2-lgM"/>
+                                    <segue destination="jdI-O8-JJ0" kind="show" id="3cW-at-nZQ"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -672,6 +672,114 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wz0-t1-W8G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3518.320610687023" y="-71.126760563380287"/>
+        </scene>
+        <!--Character View Controller-->
+        <scene sceneID="Q5J-dI-VOa">
+            <objects>
+                <viewController storyboardIdentifier="characterViewController" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="jdI-O8-JJ0" customClass="characterViewController" customModule="DoitDoitChu" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MzP-xy-ik2">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mainBack" translatesAutoresizingMaskIntoConstraints="NO" id="rcy-MC-gaj">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H9h-DF-t4n">
+                                <rect key="frame" x="20" y="573" width="353" height="156"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="C9t-sz-vE2">
+                                        <rect key="frame" x="20" y="20" width="313" height="24"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dQZ-cF-xsn">
+                                                <rect key="frame" x="0.0" y="0.0" width="191.33333333333334" height="24"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CalendarCheck" translatesAutoresizingMaskIntoConstraints="NO" id="Ce3-uc-KUk">
+                                                        <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="24" id="dDF-yZ-nI7"/>
+                                                            <constraint firstAttribute="width" constant="24" id="eyb-uv-L0q"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오늘의 할 일을 달성해주세요!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eVN-7K-oJr">
+                                                        <rect key="frame" x="32" y="0.0" width="159.33333333333334" height="24"/>
+                                                        <fontDescription key="fontDescription" name="Pretendard-Medium" family="Pretendard" pointSize="14"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KJI-kr-3gf">
+                                                <rect key="frame" x="211.33333333333334" y="1.6666666666666288" width="101.66666666666666" height="21"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TO DO &gt;" textAlignment="natural" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aXJ-Jh-U1j">
+                                                        <rect key="frame" x="33" y="0.0" width="52" height="21"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <fontDescription key="fontDescription" name="Pretendard-Medium" family="Pretendard" pointSize="13"/>
+                                                        <color key="textColor" red="0.58039215686274503" green="0.58039215686274503" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IaE-C4-ZtP">
+                                                        <rect key="frame" x="0.0" y="0.0" width="109" height="27"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain"/>
+                                                        <connections>
+                                                            <action selector="GoTodoBtn:" destination="jdI-O8-JJ0" eventType="touchUpInside" id="ANv-ak-9Gb"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="IaE-C4-ZtP" firstAttribute="leading" secondItem="KJI-kr-3gf" secondAttribute="leading" id="3fI-T3-bVo"/>
+                                                    <constraint firstAttribute="trailing" secondItem="IaE-C4-ZtP" secondAttribute="trailing" id="9bF-sV-n79"/>
+                                                    <constraint firstAttribute="bottom" secondItem="IaE-C4-ZtP" secondAttribute="bottom" id="G3d-t8-Jfi"/>
+                                                    <constraint firstItem="IaE-C4-ZtP" firstAttribute="top" secondItem="KJI-kr-3gf" secondAttribute="top" id="kgU-yv-pDu"/>
+                                                    <constraint firstAttribute="height" constant="21" id="uXm-CH-0Z6"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="C9t-sz-vE2" secondAttribute="trailing" constant="20" id="4AC-pw-1Jy"/>
+                                    <constraint firstItem="C9t-sz-vE2" firstAttribute="leading" secondItem="H9h-DF-t4n" secondAttribute="leading" constant="20" id="MBb-Ib-HMr"/>
+                                    <constraint firstItem="C9t-sz-vE2" firstAttribute="top" secondItem="H9h-DF-t4n" secondAttribute="top" constant="20" id="Q52-6G-uPp"/>
+                                    <constraint firstAttribute="height" constant="156" id="nlU-eG-AHk"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="saboten" translatesAutoresizingMaskIntoConstraints="NO" id="6mr-9C-Vx4">
+                                <rect key="frame" x="0.0" y="183" width="393" height="390"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="390" id="MxR-No-O5X"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Xg3-JJ-7ea"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="top" secondItem="rcy-MC-gaj" secondAttribute="top" id="2DM-9i-nbA"/>
+                            <constraint firstItem="6mr-9C-Vx4" firstAttribute="leading" secondItem="Xg3-JJ-7ea" secondAttribute="leading" id="Dwy-mp-nYj"/>
+                            <constraint firstAttribute="trailing" secondItem="rcy-MC-gaj" secondAttribute="trailing" id="NH8-cH-6ix"/>
+                            <constraint firstAttribute="bottom" secondItem="rcy-MC-gaj" secondAttribute="bottom" id="etg-RA-Ong"/>
+                            <constraint firstItem="H9h-DF-t4n" firstAttribute="leading" secondItem="Xg3-JJ-7ea" secondAttribute="leading" constant="20" id="g6g-na-14I"/>
+                            <constraint firstItem="6mr-9C-Vx4" firstAttribute="trailing" secondItem="Xg3-JJ-7ea" secondAttribute="trailing" id="irP-Bu-G2p"/>
+                            <constraint firstItem="Xg3-JJ-7ea" firstAttribute="bottom" secondItem="H9h-DF-t4n" secondAttribute="bottom" constant="40" id="kW2-Sq-XiY"/>
+                            <constraint firstItem="Xg3-JJ-7ea" firstAttribute="trailing" secondItem="H9h-DF-t4n" secondAttribute="trailing" constant="20" id="vt9-80-6YH"/>
+                            <constraint firstItem="H9h-DF-t4n" firstAttribute="top" secondItem="6mr-9C-Vx4" secondAttribute="bottom" id="ycQ-t8-Coj"/>
+                            <constraint firstItem="rcy-MC-gaj" firstAttribute="leading" secondItem="MzP-xy-ik2" secondAttribute="leading" id="yme-Rd-k04"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="hb1-wQ-eNN"/>
+                    <connections>
+                        <outlet property="TodoView" destination="H9h-DF-t4n" id="mKb-xz-mN7"/>
+                        <outlet property="backImage" destination="rcy-MC-gaj" id="qDX-Lj-YXK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dsH-H4-yOD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4909.160305343511" y="-86.619718309859152"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ddS-7H-jhB">
@@ -715,6 +823,7 @@
         <designable name="U59-Bt-gCD"/>
     </designables>
     <resources>
+        <image name="CalendarCheck" width="60" height="60"/>
         <image name="CheckSquare" width="22" height="22"/>
         <image name="Group 11" width="73" height="21"/>
         <image name="Group 39" width="492" height="450"/>
@@ -728,6 +837,8 @@
         <image name="TabTeam" width="35" height="48"/>
         <image name="TeamGift" width="370" height="301"/>
         <image name="dummyChar" width="596" height="660"/>
+        <image name="mainBack" width="1170" height="2532"/>
+        <image name="saboten" width="1170" height="777"/>
         <namedColor name="Orange 1000">
             <color red="1" green="0.49799999594688416" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
